# sade-chocolate-agents

./: .env.example  .gitignore  README.md  learn.sh  package-lock.json  package.json  pyproject.toml  sade.py  scout.sh  scraping_targets.json  server.js
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-ROADMAP.md
.streamlit/: config.toml
architecture/: agent_system_design.md
docs/: USAGE.md
docs/plans/: 2026-03-25-recipe-scout-v2.md  2026-03-25-web-dashboard.md  2026-03-26-parallel-pipeline.md
legal/: barter_agreement_template.md
lib/: pipeline.js
marketing/: 01_brand_strategy.md  02_growth_tactics.md  03_pricing_models.md  brand_voice_samples.md  pricing_gap_analysis.md  trend_report.md
operations/: logistics.md
outputs/labels/: README.md
product/: flavor_innovation.md
prompts/: extract.md  recipe-fetch.md  search.md  system.md
public/: index.html
research/: 2026_market_intelligence.md  pricing_deep_dive_prompt.md  research_agenda.md
scripts/: reproduce_issue.py  run_alchemist.py  run_crews.py  run_curator.py  run_growth_hacker.py  run_narrator.py  run_perfectionist.py  run_pricing_analyst.py  run_test_agent.py  run_web.py  test_marketing.py  test_narrator.py  test_pricing.py  test_product.py
skills/: README.md
skills/finance/: capability_manifest.md
style_guide/: brand_colors.json  style_config.json  typography.json
templates/: recipe.html  report.html
tests/: __init__.py
(+132 files in other folders)
